objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Engagement_Type__c</fullName>
        <inlineHelpText>Identifies the Engagement Type value from the Product this Opportunity Product relates to. This field is populated via a Workflow Rule</inlineHelpText>
        <label>Engagement Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Full_Months__c</fullName>
        <formula>FLOOR(SBQQ__QuoteLine__r.SBQQ__ProrateMultiplier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Schedules__c</fullName>
        <label>Number of Schedules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ParentID__c</fullName>
        <inlineHelpText>ID of the opportunity product that came from this product&apos;s bundle.</inlineHelpText>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this Opportunity Product.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>OpportunityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price_for_reference__c</fullName>
        <inlineHelpText>this is internally used on the triggers to properly calculate the scheduled revenue</inlineHelpText>
        <label>Unit Price for reference</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Addon_Event__c</fullName>
        <label>Addon Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUBSCRIPTION_CREATION</fullName>
                    <label>On subscription creation</label>
                </value>
                <value>
                    <fullName>SUBSCRIPTION_TRIAL_START</fullName>
                    <label>On subscription trial start</label>
                </value>
                <value>
                    <fullName>PLAN_ACTIVATION</fullName>
                    <label>On plan activation</label>
                </value>
                <value>
                    <fullName>SUBSCRIPTION_ACTIVATION</fullName>
                    <label>On subscription activation</label>
                </value>
                <value>
                    <fullName>IMMEDIATELY</fullName>
                    <label>Immediately</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Apply_Charges__c</fullName>
        <label>Apply Charges</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ONCE</fullName>
                    <label>Once</label>
                </value>
                <value>
                    <fullName>EVERYTIME</fullName>
                    <label>Everytime this event occurs</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chargebeeapps__Billing_Cycles__c</fullName>
        <label>Billing Cycles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Service_Period__c</fullName>
        <label>Service Period (days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ARRForecast__c</fullName>
        <description>Calculation of the Annual Recurring Revenue forecasted based on the Monthly Recurring Revenue. Calculation is normalized to 12 Month multiplication of Monthly Recurring Revenue and may differ from Annual Recurring Revenue (Committed).</description>
        <inlineHelpText>Calculation of the Annual Recurring Revenue forecasted based on the Monthly Recurring Revenue. Calculation is normalized to 12 Month multiplication of Monthly Recurring Revenue and may differ from Annual Recurring Revenue (Committed).</inlineHelpText>
        <label>Annual Recurring Revenue (Forecast)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ARR__c</fullName>
        <description>Annual Recurring Revenue of Renewable Service with Term 12 months or less. If Subscription Term is greater than 12 months, only 12 months is calculated.</description>
        <label>Annual Recurring Revenue (Committed)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__DateServiceEnd__c</fullName>
        <description>Applies to Services only. The end date of the Opportunity Product is calculated by the Date Service Start and Service Term with Unit of Term.

Users have the ability to change the Date Service End if Allow Override Service Date Update field is checked in Kugamon Settings.</description>
        <label>Date Service End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kuga_sub__DiscountSalesPrice__c</fullName>
        <description>Effective Price is the Sales Price with Discounts Applied.</description>
        <formula>If (ISBLANK( kuga_sub__ServiceTerm__c ) || kuga_sub__ServiceTerm__c &lt;= 0,
round(UnitPrice * (1 - Discount), 2),
round(kuga_sub__NetAmount__c / Quantity / If(Text(kuga_sub__ServiceTermBehavior__c) = &quot;Excluded&quot;, 1, kuga_sub__ServiceTerm__c), 2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Effective Price is the Sales Price with Discounts Applied</inlineHelpText>
        <label>Effective Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__EffectiveDiscount__c</fullName>
        <description>Effective Discount is based on Net Amount from List Amount.</description>
        <formula>IF(
  kuga_sub__ListAmount__c = 0,
  NULL,
  IF(
    ListPrice == UnitPrice,
    Discount,
    (kuga_sub__ListAmount__c - kuga_sub__NetAmount__c) / kuga_sub__ListAmount__c
  )
)</formula>
        <inlineHelpText>Effective Discount is based on Net Amount from List Amount</inlineHelpText>
        <label>Effective Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kuga_sub__LineTerm__c</fullName>
        <description>Displays the Service Term and the Unit of Term.</description>
        <formula>IF( kuga_sub__ServiceTerm__c  = 0, &apos; &apos;, TEXT( kuga_sub__ServiceTerm__c ) + &apos; &apos; + TEXT ( kuga_sub__UnitofTerm__c )) + If( kuga_sub__ServiceTerm__c  &gt;1, &apos;s&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ListAmount__c</fullName>
        <description>Quantity multiplied by List Price and Service Term, if Service Term Behavior is Included or Blank.</description>
        <formula>if (ISBLANK( kuga_sub__ServiceTerm__c ) || kuga_sub__ServiceTerm__c &lt;= 0, Quantity * ListPrice, Quantity * ListPrice * If(Text(kuga_sub__ServiceTermBehavior__c) = &quot;Excluded&quot;, 1, kuga_sub__ServiceTerm__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity multiplied by List Price and Service Term, if Service Term Behavior is Included or Blank</inlineHelpText>
        <label>List Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__MRR__c</fullName>
        <description>Calculation of the Monthly Recurring Revenue forecasted.</description>
        <label>Monthly Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__NetAmount__c</fullName>
        <description>Net Amount is Total Amount with Discount applied.</description>
        <formula>kuga_sub__TotalAmount__c - round(Discount * kuga_sub__TotalAmount__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net Amount is Total Amount with Discount applied.</inlineHelpText>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__NonUpliftSalesPrice__c</fullName>
        <description>The initial Sales Price before applying the Opportunity Renewal Uplift Percent.</description>
        <inlineHelpText>The initial Sales Price before applying the Opportunity Renewal Uplift Percent.</inlineHelpText>
        <label>Non-Uplift Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Opportunity Product is renewable or not. The underlying Product is setup on the Product object where the Renewable checkbox field can be set.</description>
        <label>Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__ServiceTermBehavior__c</fullName>
        <description>Included or if blank, feature will factor Term in Service Amount Calculation and Invoice Schedule. Price depends on Term.

Excluded will not factor Term in Service Amount Calculation and Invoice Schedule (Service behaves as a Product). Price independent of Term.</description>
        <inlineHelpText>Included or if blank, will factor Term in Service Amount Calculation and Invoice Schedule. Price depends on Term

Excluded will not factor Term in Service Amount Calculation and Invoice Schedule (Service behaves as a Product). Price independent of Term</inlineHelpText>
        <label>Service Term Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>kugo2p__ServiceTermBehavior</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>kuga_sub__ServiceTerm__c</fullName>
        <description>Applies to Services only. Duration for Unit of Term.</description>
        <inlineHelpText>Applies to Services only. Duration for Unit of Term..</inlineHelpText>
        <label>Service Term</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kuga_sub__Service__c</fullName>
        <description>Designates if the Opportunity Product is a Service.</description>
        <formula>IF(ISNULL(kuga_sub__DateServiceEnd__c), False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Designates if the Opportunity Product is a Service.</inlineHelpText>
        <label>Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__TotalAmount__c</fullName>
        <description>For Products, the Total Amount = Quantity x Unit Price.

For Services, the Total Amount = Quantity x Unit Price x Service Term.</description>
        <formula>if (ISBLANK(kuga_sub__ServiceTerm__c) || kuga_sub__ServiceTerm__c &lt;= 0, Quantity * UnitPrice, Quantity * UnitPrice * If(Text(kuga_sub__ServiceTermBehavior__c) = &quot;Excluded&quot;, 1, kuga_sub__ServiceTerm__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Products, the Total Amount = Quantity x Unit Price.

For Services, the Total Amount = Quantity x Unit Price x Service Term.</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kuga_sub__UnitofTerm__c</fullName>
        <description>Applies to Services only. Period for Service Term..

Note: Galactic Year is not a valid Value.</description>
        <inlineHelpText>Applies to Services only. Period for Service Term..

Note: Galactic Year is not a valid Value.</inlineHelpText>
        <label>Unit of Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Minute</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Fortnight</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Galactic Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kuga_sub__UpliftRenewalPrice__c</fullName>
        <description>Designates if the Opportunity Product is subject for a Price Increase. 

References the Uplift Renewal Price on the Additional Product Info record.</description>
        <formula>PricebookEntry.Product2.kuga_sub__UpliftRenewalPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Designates if the Opportunity Product is subject for a Price Increase. 

References the Uplift Renewal Price on the Additional Product Info record..</inlineHelpText>
        <label>Uplift Renewal Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__AdditionalChargeCredit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup field to the Additional Charge/Credit record referenced in this Opportunity Product.</description>
        <inlineHelpText>Lookup field to the Additional Charge/Credit record referenced in this Opportunity Product</inlineHelpText>
        <label>Additional Charge/Credit</label>
        <referenceTo>kugo2p__AdditionalChargeCredit__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ConfigurationOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Configuration Option record referenced in this Opportunity Product.</description>
        <inlineHelpText>Lookup field to the Configuration Option record referenced in this Opportunity Product</inlineHelpText>
        <label>Configuration Option</label>
        <referenceTo>kugo2p__ConfigurationOption__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ParentLineID__c</fullName>
        <description>Opportunity Product ID of related Parent Line.</description>
        <inlineHelpText>Opportunity Product ID of related Parent Line</inlineHelpText>
        <label>Parent Line ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>